name:                  mismi-autoscaling-core
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-autoscaling-core.

library
  build-depends:
                       base                            >= 3          && < 5
                     , mismi-p
                     , mismi-ec2-core
                     , mismi-iam-core
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.9

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.Autoscaling.Core.Data

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi-disorder
                     , hedgehog-corpus
                     , mismi-p
                     , mismi-autoscaling-core
                     , mismi-ec2-core
                     , mismi-ec2-core-test
                     , semigroups                      >= 0.16       && < 0.19
                     , text
                     , time
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*

  other-modules:       Test.Mismi.Autoscaling.Core.Arbitrary
                       Test.Mismi.Autoscaling.Core.Data
