name:                  mismi-cli
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Custom
description:           mismi-s3.

library
  default-language:    Haskell2010
  build-depends:       array
                     , base                            >= 3          && < 5
                     , optparse-applicative            >= 0.11       && < 0.13
                     , attoparsec
                     , text
                     , mismi-p

  ghc-options:         -Wall

  hs-source-dirs:      src

  exposed-modules:
                       Mismi.Cli.Options

executable s3
  main-is:             ../main/s3.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      gen
                       src
  build-depends:       base                            >= 3          && < 5
                     , mismi-core
                     , mismi-openssl
                     , mismi-s3
                     , mismi-s3-core
                     , mismi-p
                     , mismi-cli
                     , attoparsec
                     , bytestring                      == 0.10.*
                     , conduit
                     , containers                      == 0.5.*
                     , exceptions
                     , filepath
                     , lens                            >= 4.8        && < 4.16
                     , optparse-applicative            >= 0.11       && < 0.13
                     , resourcet
                     , text
                     , transformers
                     , transformers-either             == 0.1.*
                     , unix

test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
