name:                  mismi-disorder
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Tim McGilchrist
copyright:             (c) 2015 Ambiata
synopsis:              mismi-disorder
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-disorder - Property testing combinators and tools.

library
  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7        && < 2.10
                     , directory                       >= 1.2        && < 1.4
                     , ieee754                         >= 0.7        && < 0.9
                     , quickcheck-text                 >= 0.1        && < 0.2
                     , process                         >= 1.2        && < 1.8
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            >= 1.1        && < 1.3
                     , transformers                    >= 0.3        && < 1
                     , template-haskell                >= 2.4

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.Disorder.Core.IO
                       Mismi.Disorder.Core.Main
                       Mismi.Disorder.Core.Tripping
                       Mismi.Disorder.Core.Gen
                       Mismi.Disorder.Core.UniquePair
                       Mismi.Disorder.Core.Property

