name:                  mismi-kernel
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata
synopsis:              AWS library
category:              AWS
cabal-version:         >= 1.8
build-type:            Simple
description:           mismi-kernel.

library
  build-depends:
                       base                            >= 3          && < 5
                     , mismi-p
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Mismi.Kernel.Data

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , mismi-disorder
                     , hedgehog-corpus
                     , mismi-kernel
                     , mismi-p
                     , text
                     , QuickCheck                      >= 2.7        && < 2.10
                     , quickcheck-instances            == 0.3.*
  other-modules:     Test.Mismi.Kernel.Arbitrary
                     Test.Mismi.Kernel.Data
